[Deepak] feat(exception, response): add global exception handling and standardized API response DTO
- Added GlobalExceptionHandler to handle exceptions across the application
- Implemented ApiResponseDto to provide consistent response structure (status, message, data, path)
- Updated controllers to wrap responses using BuildResponse.success()
- Improved API consistency and error handling for better client experience